--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,12 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.9.0",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.15.3",
     "nodemon": "^3.1.4",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "soap": "^1.6.0"
   }
 }
